--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -29,8 +29,14 @@ $input-disabled-bg: #ededed;
 // background
 $background-color-select-hover: #f3f3f3;
 $background-color-multiple: #f7f7f7;
+
+// explanation
+$explanation-color: #999;
+
+// steps
+$steps-border-color: #ccc;
+$steps-title-color: #666;
+$steps-color: #999;
 // size
 $font-small-size: 12px;
 $font-base-size: 14px;
-
-$explanation-color: #999;
