--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -11,6 +11,7 @@ $ivue-button-icon-size: 40px;
 $icon-size: 24px;
 // color
 $primary-color: #4177F6;
+$error-color: #ed4014;
 $divider-color: rgba(0, 0, 0, 0.38);
 $text-color:#515a6e;
 $text-disable-color:#c5c8ce;
