--- a/src/styles/components/IVueStepper.scss
+++ b/src/styles/components/IVueStepper.scss
@@ -4,22 +4,20 @@ $steps: 'ivue-stepper-steps';
       font-size: 0;
       width: 100%;
       line-height: 1.5;
-      &.#{$name}-horizontal {
-            .#{$steps}-content-slot {
-                  padding-left: 35px;
-            }
-      }
       .#{$name}-vertical {
             .#{$name}-item {
                   display: block;
             }
       }
-      .#{$name}-steps-item {
+      .#{$steps}-item {
             display: inline-block;
             position: relative;
             vertical-align: top;
+            &:last-child .#{$steps}-divider {
+                  display: none;
+            }
       }
-      .#{$name}-steps-divider {
+      .#{$steps}-divider {
             position: absolute;
             left: 0;
             top: 13px;
@@ -32,7 +30,7 @@ $steps: 'ivue-stepper-steps';
                   height: 1px;
                   vertical-align: top;
                   border-radius: 1px;
-                  background: $border-multiple-color;
+                  background-color: $border-multiple-color;
                   &:after {
                         content: '';
                         position: absolute;
@@ -40,12 +38,13 @@ $steps: 'ivue-stepper-steps';
                         opacity: 0;
                         width: 0;
                         height: 100%;
-                        background: $border-multiple-color;
+                        background-color: $border-multiple-color;
+                        transition: all $ivue-transition-default;
                   }
             }
       }
       .#{$steps}-header {
-            background: #fff;
+            background-color: #fff;
       }
       .#{$steps}-title {
             display: inline-block;
@@ -54,9 +53,8 @@ $steps: 'ivue-stepper-steps';
             font-size: $font-base-size;
             font-weight: bold;
             color: $steps-title-color;
-            background: #fff;
+            background-color: #fff;
       }
-      
       .#{$steps}-header,
       .#{$steps}-content {
             position: relative;
@@ -78,6 +76,7 @@ $steps: 'ivue-stepper-steps';
             height: 26px;
             line-height: 24px;
             transition: background-color $ivue-transition-default;
+            cursor: pointer;
             >.#{$steps}-icon {
                   position: relative;
                   top: -1px;
@@ -138,13 +137,89 @@ $steps: 'ivue-stepper-steps';
                   opacity: 1;
                   width: 100%;
                   background: $primary-color;
-                  transition: all $ivue-transition-default;
             }
             .#{$steps}-title {
                   color: $steps-color;
             }
             .#{$steps}-content-slot {
                   color: $steps-color;
+            }
+      }
+      /*错误*/
+      .#{$steps}-status-error {
+            .#{$steps}-header-content {
+                  border-color: $error-color;
+                  background-color: #fff;
+                  >.#{$steps}-icon {
+                        color: $error-color;
+                  }
+            }
+            .#{$steps}-title {
+                  color: $error-color;
+            }
+            .#{$steps}-content-slot {
+                  color: $error-color;
+            }
+      }
+      .#{$steps}-next-error {
+            .#{$steps}-divider>i,
+            .#{$steps}-divider>i:after {
+                  background-color: $error-color;
+            }
+      }
+      /*横向*/
+      &.#{$name}-horizontal {
+            .#{$steps}-content-slot {
+                  padding-left: 35px;
+            }
+            .#{$steps}-item:not(:first-child) .#{$steps}-header {
+                  padding-left: 10px;
+                  margin-left: -10px;
+            }
+      }
+      /*纵向*/
+      &.#{$name}-vertical {
+            .#{$steps}-item {
+                  display: block;
+            }
+            .#{$steps}-divider {
+                  position: absolute;
+                  left: 13px;
+                  top: 0;
+                  padding: 30px 0 4px 0;
+                  height: 100%;
+                  width: 1px;
+                  >i {
+                        height: 100%;
+                        width: 1px;
+                        &:after {
+                              height: 0;
+                              width: 100%;
+                        }
+                  }
+            }
+            .#{$steps}-status-finish {
+                  .#{$steps}-divider>i:after {
+                        height: 100%;
+                  }
+            }
+            .#{$steps}-header {
+                  float: left;
+                  &-content {
+                        margin-right: 16px;
+                  }
+            }
+            .#{$steps}-content {
+                  min-height: 47px;
+                  overflow: hidden;
+                  display: block;
+            }
+            .#{$steps}-title {
+                  line-height: 26px;
+            }
+            .#{$steps}-content-slot {
+                  padding-bottom: 12px;
+                  padding-left: 0;
             }
       }
 }
