--- a/src/styles/components/IVueSelect.scss
+++ b/src/styles/components/IVueSelect.scss
@@ -249,7 +249,7 @@ $name: 'ivue-select';
             &-title{
                   padding-left: 8px;
                   font-size: $font-small-size;
-                  color: $explanation-color;
+                  color: $legend-color;
                   height: 30px;
                   line-height: 30px;
             }
