--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -18,6 +18,7 @@ $text-disable-color:#c5c8ce;
 $arrow-color: #808695;
 $border-color: #dcdee2;
 $border-multiple-color: #e8eaec;
+$legend-color: #999;
 // cursor
 $cursor-disabled: not-allowed;
 // size
@@ -31,13 +32,9 @@ $input-disabled-bg: #ededed;
 $background-color-select-hover: #f3f3f3;
 $background-color-multiple: #f7f7f7;
 
-// explanation
-$explanation-color: #999;
-
 // steps
 $steps-border-color: #ccc;
 $steps-title-color: #666;
-$steps-color: #999;
 // size
 $font-small-size: 12px;
 $font-base-size: 14px;
