--- a/src/styles/components/IVueInput.scss
+++ b/src/styles/components/IVueInput.scss
@@ -10,7 +10,7 @@ $name: 'ivue-input';
             position: relative;
             padding: 4px 7px;
             font-size: $font-size-small;
-            border-radius: 4px;
+            border-radius: $border-radius-small;
             border: 1px solid $border-color;
             color: $text-color;
             cursor: text;
