--- a/src/styles/components/IVueSelect.scss
+++ b/src/styles/components/IVueSelect.scss
@@ -65,7 +65,7 @@ $name: 'ivue-select';
             box-sizing: border-box;
             outline: none;
             user-select: none;
-            border-radius: 4px;
+            border-radius: $border-radius-small;
             border: 1px solid $border-color;
             background-color: #fff;
             min-height: 32px;
@@ -182,7 +182,7 @@ $name: 'ivue-select';
             overflow: auto;
             background-color: #fff;
             box-sizing: border-box;
-            border-radius: 4px;
+            border-radius: $border-radius-small;
             box-shadow: 0 1px 6px rgba(0, 0, 0, .2);
             z-index: 999;
             transform-origin: center top 0px;
