--- a/src/styles/components/IVueProgress.scss
+++ b/src/styles/components/IVueProgress.scss
@@ -1,9 +1,12 @@
-$name: 'ivue-progress';
-.#{$name} {
+$linear: 'ivue-progress-linear';
+$circular: 'ivue-progress-circular';
+.#{$linear} {
       display: inline-block;
       position: relative;
       font-size: $font-small-size;
       width: 100%;
+      color: $primary-color;
+      background: none;
       &-outer {
             display: inline-block;
             padding: 0;
@@ -25,7 +28,7 @@ $name: 'ivue-progress';
       &-bg {
             position: relative;
             border-radius: 100px;
-            background-color: $primary-color;
+            background-color: currentColor;
             transition: all $ivue-transition-default;
       }
       &-success-bg {
@@ -52,14 +55,24 @@ $name: 'ivue-progress';
                   font-size: $font-small-size;
             }
       }
-      &-wrong &-text {
-            color: $error-color;
+      &-success {
+            .#{$linear}-bg {
+                  background-color: $success-color;
+            }
+            .#{$linear}-text {
+                  color: $success-color;
+            }
       }
-      &-success &-text {
-            color: $success-color;
+      &-wrong {
+            .#{$linear}-bg {
+                  background-color: $error-color;
+            }
+            .#{$linear}-text {
+                  color: $error-color;
+            }
       }
       &-active {
-            .#{$name}-bg:before {
+            .#{$linear}-bg:before {
                   content: '';
                   position: absolute;
                   top: 0;
@@ -70,6 +83,74 @@ $name: 'ivue-progress';
                   border-radius: 10px;
                   opacity: 0;
                   animation: ivue-progress-active 2s ease-in-out infinite;
+            }
+      }
+}
+
+.#{$circular} {
+      position: relative;
+      display: inline-block;
+      vertical-align: middle;
+      background: none;
+      color: $primary-color;
+      svg {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            width: 100%;
+            height: 100%;
+            margin: auto;
+            z-index: 0;
+      }
+      svg:not(:root) {
+            overflow: hidden;
+      }
+      &-underlay {
+            stroke: $progress-bg;
+            z-index: 1;
+      }
+      &-overlay {
+            stroke: currentColor;
+            z-index: 2;
+            transition: all .6s ease-in-out;
+      }
+      &-indeterminate {
+            svg {
+                  animation: progress-circular-rotate 1.4s linear infinite;
+                  transform-origin: center center;
+                  transition: all 0.2s ease-in-out;
+            }
+      }
+      &-indeterminate &-overlay {
+            animation: progress-circular-dash 1.4s ease-in-out infinite;
+            stroke-linecap: round;
+            stroke-dasharray: 80, 200;
+            stroke-dashoffset: 0px;
+      }
+      &-text {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate3d(-50%, -50%, 0);
+            font-size: $font-size-small;
+            color: currentColor;
+      }
+      &-success {
+            .#{$circular}-overlay {
+                  color: $success-color;
+            }
+            .#{$circular}-text {
+                  color: $success-color;
+            }
+      }
+      &-wrong {
+            .#{$circular}-overlay {
+                  color: $error-color;
+            }
+            .#{$circular}-text {
+                  color: $error-color;
             }
       }
 }
@@ -92,5 +173,26 @@ $name: 'ivue-progress';
       100% {
             opacity: 0;
             width: 100%;
+      }
+}
+
+@keyframes progress-circular-rotate {
+      100% {
+            transform: rotate(360deg);
+      }
+}
+
+@keyframes progress-circular-dash {
+      0% {
+            stroke-dasharray: 1, 200;
+            stroke-dashoffset: 0px;
+      }
+      50% {
+            stroke-dasharray: 100, 200;
+            stroke-dashoffset: -15px;
+      }
+      100% {
+            stroke-dasharray: 100, 200;
+            stroke-dashoffset: -125px;
       }
 }
