--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -20,6 +20,7 @@ $arrow-color: #808695;
 $border-color: #dcdee2;
 $border-multiple-color: #e8eaec;
 $legend-color: #999;
+$title-color:#17233d;
 // cursor
 $cursor-disabled: not-allowed;
 // size
