--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -23,3 +23,13 @@ a {
       background: 0px 0px;
       cursor: pointer;
 }
+
+body {
+      font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, \\5FAE\8F6F\96C5\9ED1, Arial, sans-serif;
+      font-size: 12px;
+      line-height: 1.5;
+      color: #515a6e;
+      background-color: #fff;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+}
