--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -12,6 +12,7 @@ $icon-size: 24px;
 // color
 $primary-color: #4177F6;
 $success-color:#19be6b;
+$warning-color:#F90;
 $error-color: #ed4014;
 $divider-color: rgba(0, 0, 0, 0.38);
 $text-color:#515a6e;
