--- a/src/styles/components/IVueInput.scss
+++ b/src/styles/components/IVueInput.scss
@@ -9,7 +9,7 @@ $name: 'ivue-input';
             display: inline-block;
             position: relative;
             padding: 4px 7px;
-            font-size: $font-size-small;
+            font-size: $font-small-size;
             border-radius: $border-radius-small;
             border: 1px solid $border-color;
             color: $text-color;
