--- a/src/styles/components/IVueSwitch.scss
+++ b/src/styles/components/IVueSwitch.scss
@@ -71,7 +71,7 @@ $large-after-width: 28px;
             align-items: center;
             display: flex;
             color: #fff;
-            font-size: $font-size-small;
+            font-size: $font-small-size;
             transform: translate3d(23px, 0, 0);
             will-change: transform;
             i {
