--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -14,6 +14,7 @@ $primary-color: #4177F6;
 $success-color:#19be6b;
 $warning-color:#F90;
 $error-color: #ed4014;
+$disabled-color: #ccc;
 $divider-color: rgba(0, 0, 0, 0.38);
 $text-color:#515a6e;
 $text-disable-color:#c5c8ce;
