--- a/src/styles/components/IVueTabs.scss
+++ b/src/styles/components/IVueTabs.scss
@@ -5,29 +5,50 @@ $name: 'ivue-tabs';
       &-bar {
             position: relative;
       }
+      &-wrapper {
+            overflow: hidden;
+            display: flex;
+      }
       &-container {
             position: relative;
             flex: 1 0 auto;
             display: flex;
-            height: 50px;
+            height: 48px;
             list-style-type: none;
             white-space: nowrap;
             transition: transform .6s cubic-bezier(.86, 0, .07, 1);
       }
+      &-container--centered &-slider-wrapper+&-tab {
+            margin-left: auto;
+      }
+      &-container--centered>&-tab:first-child {
+            margin-left: auto;
+      }
+      &-container--centered>&-tab:last-child {
+            margin-right: auto;
+      }
+      &-container--right>&-tab:first-child {
+            margin-left: auto;
+      }
+      &-container--right &-slider-wrapper+&-tab {
+            margin-left: auto;
+      }
       &-tab {
             position: relative;
-            margin-right: 16px;
             padding: 8px 16px;
             align-items: center;
             display: inline-flex;
             flex: 0 1 auto;
             max-width: 264px;
             box-sizing: border-box;
+            width: auto;
             height: 100%;
             cursor: pointer;
             text-decoration: none;
             transition: color $ivue-transition-default;
-            color: rgba(255,255,255,.7);
+            color: rgba(255, 255, 255, .7);
+            font-weight: 500;
+            font-size: 14px;
             &-disabled {
                   pointer-events: none;
                   color: $disabled-color;
@@ -35,5 +56,16 @@ $name: 'ivue-tabs';
             &-active {
                   color: #fff;
             }
+      }
+      &-slider-wrapper {
+            position: absolute;
+            bottom: 0;
+            margin: 0;
+            transition: $ivue-transition-default;
+      }
+      &-slider {
+            width: 100%;
+            height: 2px;
+            background-color: #fff;
       }
 }
