--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -23,6 +23,7 @@ $border-color: #dcdee2;
 $border-multiple-color: #e8eaec;
 $legend-color: #999;
 $title-color:#17233d;
+$accent-color: rgba(0,0,0,.87);
 // cursor
 $cursor-disabled: not-allowed;
 // input
