--- a/src/styles/components/IVuePicker.scss
+++ b/src/styles/components/IVuePicker.scss
@@ -19,6 +19,9 @@ $name:'ivue-picker';
             display: flex;
             flex-direction: column;
             align-items: center;
+            > div{
+                  width: 100%;
+            }
       }
 }
 
