--- a/src/styles/components/IVueButton.scss
+++ b/src/styles/components/IVueButton.scss
@@ -97,7 +97,7 @@
       }
       &--selected{
             background:  $primary-color;
-            color: #fff
+            color: #fff !important
       }
 }
 
