--- a/src/styles/components/IVueDatePickerDate.scss
+++ b/src/styles/components/IVueDatePickerDate.scss
@@ -1,55 +1,31 @@
 $name: 'ivue-date-picker-date';
 .#{$name} {
       position: relative;
-      padding: 0 12px;
-      min-height: 242px;
-      font-size: 14px;
+      padding: 0 12px 12px 12px;
+      height: 248px;
       table {
             table-layout: fixed;
             width: 100%;
             transition: .3s cubic-bezier(.25, .8, .5, 1);
       }
-      &-table {
+      &--table {
             th {
                   padding: 8px 0;
                   font-weight: 600;
+                  color: rgba(0, 0, 0, 0.38);
             }
             td {
                   position: relative;
                   text-align: center;
                   width: 45px;
                   button {
+                        font-size: $font-small-size;
                         height: 33px;
                         width: 33px;
                         min-width: 33px;
                         margin: 0;
+                        color: rgba(0, 0, 0, 0.87);
                   }
             }
       }
-}
-
-.#{$name}-transition-enter {
-      transform: translate(100%, 0);
-}
-
-.#{$name}-transition-leave,
-.#{$name}-transition-leave-active {
-      position: absolute;
-      top: 0;
-}
-
-.#{$name}-transition-leave-to {
-      position: absolute;
-      transform: translate(-100%, 0);
-}
-
-.#{$name}-reverse-transition-enter {
-      transform: translate(-100%, 0);
-}
-
-.#{$name}-reverse-transition-leave,
-.#{$name}-reverse-transition-leave-to {
-      top: 0;
-      position: absolute;
-      transform: translate(100%, 0);
 }
