--- a/src/styles/components/IVueDatePickerDate.scss
+++ b/src/styles/components/IVueDatePickerDate.scss
@@ -6,7 +6,7 @@ $name: 'ivue-date-picker-date';
       table {
             table-layout: fixed;
             width: 100%;
-            transition: .3s cubic-bezier(.25, .8, .5, 1);
+            transition: $ivue-transition-default;
       }
       &--table {
             th {
@@ -25,6 +25,8 @@ $name: 'ivue-date-picker-date';
                         min-width: 33px;
                         margin: 0;
                         color: rgba(0, 0, 0, 0.87);
+                        border: 1px solid;
+                        border-color: transparent;
                   }
             }
       }
