--- a/src/styles/components/IVueDatePickerDate.scss
+++ b/src/styles/components/IVueDatePickerDate.scss
@@ -1,7 +1,7 @@
 $name: 'ivue-date-picker-date';
 .#{$name} {
       position: relative;
-      padding: 0 12px 12px 12px;
+      padding: 0 12px;
       height: 248px;
       table {
             table-layout: fixed;
