--- a/src/styles/components/IVueDatePickerHeader.scss
+++ b/src/styles/components/IVueDatePickerHeader.scss
@@ -26,4 +26,10 @@ $name: 'ivue-date-picker-header';
                   }
             }
       }
+      .ivue-button--icon {
+            width: 36px;
+            min-width: 36px;
+            height: 36px;
+            margin: 0;
+      }
 }
