--- a/src/styles/components/IVueDatePickerDate.scss
+++ b/src/styles/components/IVueDatePickerDate.scss
@@ -30,4 +30,14 @@ $name: 'ivue-date-picker-date';
                   }
             }
       }
+      &--note {
+            position: absolute;
+            left: 50%;
+            bottom: 2px;
+            transform: translateX(-4px);
+            border-radius: 50%;
+            width: 8px;
+            height: 8px;
+            background: currentColor;
+      }
 }
